# odooxkahe-cafe-ps

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  attack_results.json  check.py  docker-compose.yml  entrypoint.sh  er_diagram.txt  er_diagram_utf8.txt  generate_docs.py  generate_er.py  master_test_results.json  openapi.json  parse_pyright.py  pyproject.toml  pyright_fresh.json  pyright_output.json  pyright_output_utf8.json  run.bat  run_explain.py  seed_ai_data.py  setup.bat  test_auth_endpoints.js  test_conn.py  test_endpoints.js  test_kds.py  test_pos_flow.js  test_report.xlsx  test_shape_verify.js  validation_output.md
alembic/: env.py
alembic/versions/: 001_initial.py  0d90cd45b480_add_snapshots_and_mirrors.py  869d4995aa1e_add_indexes_phase3.py  b34b316aedff_phase2_enhancements.py  f98d6201b3ea_add_storesetting_model.py  ff0e74a07937_add_inventory_and_feedback_models.py
app/: __init__.py  main.py  seed.py
app/core/: config.py  database.py  dependencies.py  exceptions.py  middleware.py  security.py  templates.py  websocket_manager.py
app/models/: __init__.py  analytics_mirror.py  booking.py  category.py  coupon.py  customer.py  feedback.py  floor.py  inventory.py  order.py  order_version.py  payment.py  payment_method.py  pos_session.py  product.py  promotion.py  refresh_token.py  reservation.py  snapshot.py  store_setting.py  table.py  user.py
app/repositories/: base_repository.py  booking_repository.py  category_repository.py  coupon_repository.py  customer_repository.py  (+11 more)
frontend-odoo/: index.html  package-lock.json  package.json
(+144 files in other folders)
