[project]
name = "cafe-pos-backend"
version = "1.0.0"
description = "Odoo-style Cafe POS Backend System"
requires-python = ">=3.11"
dependencies = [
    # Web Framework
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # Validation & Settings
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "pwdlib[bcrypt]>=0.2.0",
    "bcrypt>=4.1.0",
    # Redis (optional cache)
    "redis>=5.0.0",
    # Utilities
    "python-multipart>=0.0.9",
    "qrcode[pil]>=7.4.0",
    "reportlab>=4.2.0",
    "openpyxl>=3.1.0",
    "httpx>=0.27.0",
    "python-dateutil>=2.9.0",
    "razorpay>=1.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
